<resources>
    <string name="app_name">instagramClone</string>
    <string name="hint_your_email">Your Email…</string>
    <string name="hint_your_password">Your Password…</string>
    <string name="hint_your_nickname">Your nickName…</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="text_log_in">Log in</string>
    <string name="text_don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="message_please_wait">Please Wait…</string>
    <string name="text_hint_search">search…</string>
    <string name="text_hint_description">Description…</string>
    <string name="text_hint_add_a_comment">Add a comment…</string>
    <string name="text_post">POST</string>
    <string name="text_following">following</string>
    <string name="text_followers">followers</string>
    <string name="text_posts">posts</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_follow">follow</string>
    <string name="text_save">SAVE</string>
    <string name="text_change_photo">Change Photo</string>
    <string name="text_notification">Notification</string>
    <string name="text_settings">Settings</string>
    <string name="text_log_out">Log Out</string>
</resources>
